
.. sharedinclude:: dbx/jvm/v5.4-wn-items.rst

   .. replacement:: sort-option-link

      the :ref:`java-rs-client-bulk-write-update` and
      :ref:`java-rs-client-bulk-write-replace` sections of the Bulk
      Write Operations guide

   .. replacement:: k8s-link

      the :ref:`MONGODB-OIDC: Kubernetes <java-rs-auth-kubernetes>`
      section of the Enterprise Authentication Mechanisms guide

.. _javars-version-5.3:

What's New in 5.3
-----------------

The 5.3 driver release includes the following changes, fixes,
and features:

.. sharedinclude:: dbx/jvm/v5.3-wn-items.rst

   .. replacement:: vector-type-example-link

      To learn about this type, see the
      `BinaryVector <{+api+}/bson/org/bson/BinaryVector.html>`__
      API documentation.

   .. replacement:: update-replace-example-link
      
      the :ref:`java-rs-write-update-docs`, :ref:`java-rs-write-replace`,
      and :ref:`java-rs-bulk-write` guides

- Implements a *client* bulk write API that allows you to perform write
  operations on multiple databases and collections in the same call. To learn
  more about this feature, see the :ref:`java-rs-client-bulk-write`
  section of the Bulk Operations guide.

.. _javars-version-5.2:

What's New in 5.2
-----------------

.. important:: Removal of Support for {+mdb-server+} 3.6

   {+driver-short+} v5.2 removes support for {+mdb-server+} 3.6. To
   learn more about compatible versions of the server, see
   :ref:`java-rs-compatibility`.

The 5.2 driver release includes the following changes, fixes,
and features:

.. sharedinclude:: dbx/jvm/v5.2-wn-items.rst

   .. replacement:: avs-index-link

      the `SearchIndexModel <{+core-api+}/client/model/SearchIndexModel.html>`__
      API documentation

   .. replacement:: encrypt-link

      the :ref:`In-Use Encryption <javars-encrypt>` guide

   .. replacement:: vector-search-link

      the :atlas:`Atlas Vector Search Quick Start
      </atlas-vector-search/tutorials/vector-search-quick-start/>`
