@@ -11,7 +11,7 @@
      - Java 7
      - Java 6
 
-   * - 4.11 to 5.3
+   * - 4.11 to 5.4
      - ✓
      - ✓
      - ✓
