@@ -14,7 +14,7 @@
      - MongoDB 4.0
      - MongoDB 3.6
 
-   * - 5.2 to 5.3
+   * - 5.2 to 5.4
      - ✓
      - ✓
      - ✓
