@@ -111,6 +111,14 @@ The code executes the following steps:
 
 .. sharedinclude:: dbx/transactions-parallelism.rst
 
+   .. replacement:: driver-specific-content
+
+      If you're using {+mdb-server+} v8.0 or later, you can perform
+      write operations on multiple namespaces within a single
+      transaction by using bulk write operations. To learn more, see the
+      :ref:`java-rs-client-bulk-write` section of the Bulk Write
+      Operations guide.
+
 Additional Information
 ----------------------
 
